feat(api): add deposits crud endpoints
